--- a/SBTK2/SBTK2/SBTK2.csproj
+++ b/SBTK2/SBTK2/SBTK2.csproj
@@ -46,14 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="CreateTextureAtlas.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="CreateTextureAtlas.Designer.cs">
+      <DependentUpon>CreateTextureAtlas.cs</DependentUpon>
     </Compile>
+    <Compile Include="TextureListManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="CreateTextureAtlas.resx">
+      <DependentUpon>CreateTextureAtlas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
