--- a/SBTK2/SBTK2/SBTK2.csproj
+++ b/SBTK2/SBTK2/SBTK2.csproj
@@ -56,6 +56,7 @@
     <Compile Include="TextureListManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextureRect.cs" />
     <EmbeddedResource Include="CreateTextureAtlas.resx">
       <DependentUpon>CreateTextureAtlas.cs</DependentUpon>
     </EmbeddedResource>
