Created class for the predefined rectangles
Signed-off-by: Johan Fredriksson <johanfredriksson1987@gmail.com>

--- a/SBTK2/SBTK2/SBTK2.csproj
+++ b/SBTK2/SBTK2/SBTK2.csproj
@@ -52,6 +52,10 @@
     <Compile Include="CreateTextureAtlas.Designer.cs">
       <DependentUpon>CreateTextureAtlas.cs</DependentUpon>
     </Compile>
+    <Compile Include="CustomPanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="CustomRectangleRule.cs" />
     <Compile Include="Sprite.cs" />
     <Compile Include="TextureListManager.cs" />
     <Compile Include="Program.cs" />
